<resources>

    <string name="app_name">LFC Team Tracker</string>
    <string name="action_legend_edit">Edit Legend</string>
    <string name="teamtrackerTitle">Welcome</string>
    <string name="teamtrackerSubtitle">LFC Team Tracker</string>

    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Liverpool FC Team Tracker</string>
    <string name="nav_header_subtitle">All the latest information and statistics</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_player">New Player</string>
    <string name="menu_team">Team</string>
    <string name="menu_goalcontrib">Goal Contributions</string>
    <string name="menu_leaguelead">Competitions</string>
    <string name="menu_fixtures">Fixtures</string>
    <string name="menu_addLegends">Add Legend</string>
    <string name="menu_legends">Legends</string>
    <string name="menu_history">Overview</string>
    <string name="menu_trophies">Club Trophies</string>
    <string name="menu_addTrophies">Add Trophy</string>

    <string name="hint_name">Enter Name</string>
    <string name="hint_position">Enter Position</string>
    <string name="hint_age">Enter Age</string>
    <string name="hint_yearsigned">Enter Year Signed</string>
    <string name="hint_signingvalue">Enter Value Signed For</string>
    <string name="hint_currentvalue">Enter Current Value</string>
    <string name="hint_nationality">Enter Nationality</string>

    <string name="button_addPlayer">Add Player</string>
    <string name="button_addPlayerImage">Add Player Image</string>

    <string name="textview_position">Position:</string>
    <string name="textview_name">Name:</string>


    <string name="hint_lname">Enter Name</string>
    <string name="hint_caps">Enter Amount of Appearances</string>
    <string name="hint_trophiesWon">Enter Amount of Trophies Won</string>
    <string name="hint_yrsAtClub">Enter Number of Years Spent at Club</string>

    <string name="button_addLegend">Add Legend</string>
    <string name="button_addLegendImage">Add Legend Image</string>

    <string name="action_legend">Legends</string>
    <string name="action_home">Home</string>
    <string name="action_addLegend">Add Legend</string>
    <string name="action_history">History</string>
    <string name="action_legends">Legends</string>
    <string name="action_team">Team</string>

    <string name="text_home">Welcome to Liverpool FC Team Tracker</string>
    <string name="text_home2">An App Developed for the Fans to Cater for the Latest Information and Facts</string>

    <string name="text_overview1">Since they were founded in 1892, the Liverpool Football Club name was synonymous with fame and glory.
        Internationally, Liverpool is the most successful British club of all time with plenty of European trophies on their record.
        They are one of the most popular football teams in the world, with over 200 supporter clubs in at least 50 different countries.
        Liverpool Football Club was formed following a disagreement between the Everton Football Committee, who oversaw the city of Liverpools
        oldest professional football club, and John Houlding, who owned Anfield, the land used for games.</string>

    <string name="text_overview2">Houlding originally wanted to name the team Everton Athletic to spite the former committee, but the English Football Association wouldnt allow it. So instead, the team adopted the moniker,
        Liverpoool F.C, The team quickly rose through the ranks of English Football, winning the Lancashire league, then the Second division, gaining entrance
        to the First Division, English Footballs highest league.  </string>

    <string name="text_overview3">They won it twice in the span of 5 years, 1901 and 1906. While the league did not have the
        competitive nature it does now, the accomplishment was no small feat. These crucial years would help establish Liverpool as a team to be respected, though
        far from the dominance they would enjoy later in their tenure.
     </string>

    <string name="action_addTrophy">Add Trophy</string>
    <string name="hint_trophyName">Trophy Name</string>
    <string name="hint_trophyAmount">Amount they have Won</string>
    <string name="button_addTrophyImage">Add Trophy Image</string>
    <string name="button_addTrophy">Add Trophy</string>
    <string name="action_trophy">Trophies</string>
    <string name="error_trophyName">Please Enter a trophy Name</string>
    <string name="error_trophyText">Please Fill in all Fields</string>
    <string name="error_text">Please Enter Text for all fields</string>

    <!-- START Firebase Resources-->

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="messageLoading">Please wait while we Connect to the Server...</string>
    <string name="error_nationality">Please Enter a nationality</string>
    <string name="error_currentValue">Please Enter the players Current Value</string>
    <string name="error_signingValue">Please Enter Players Signing Value</string>
    <string name="error_position">Please Enter A players Postion</string>
    <string name="error_name">Please Enter A Name</string>
    <string name="error_Age">Please Enter A Age</string>
    <string name="error_yearSigned">Please Enter The Year Signed</string>
    <string name="error_trophiesWon">Please Enter Trophies Won</string>
    <string name="error_yrsAtClub">Please Enter Years At Club</string>
    <string name="error_caps">Enter How many Caps</string>
    <string name="error_lname">Enter Legends Name</string>
    <string name="error_tAmount">Please Enter Trophy Amount</string>
    <string name="error_tname">Please Enter Trophy name</string>
    <string name="select_profile_image">Select Profile Image</string>
    <string name="nav_header_email">Email</string>
    <string name="menu_signOut">Sign Out</string>
    <string name="action_player_edit">Edit Player</string>
    <string name="button_editPlayer">Edit Player</string>
    <string name="button_editPlayerImage">Edit Player Image</string>
    <string name="action_player">Player</string>
    <string name="action_trophy_edit">Edit Trophy</string>
    <string name="menu_players_all">All Players</string>
    <string name="menu_players">Players</string>

    <string name="sign_in_google">Sign In with Google</string>
    <string name="sign_in_email">Sign In with Email</string>
    <string name="sign_in_phone">Sign In with Phone</string>
    <string name="hint_date">Enter Date</string>
    <string name="hint_title">Enter Title</string>
    <string name="hint_desc">Enter Description</string>
    <string name="button_editFan">Edit Fan Moment</string>
    <string name="button_addFan">Add Fan Moment</string>
    <string name="action_fan_moment">Fan Moments</string>
    <string name="action_fan_moment_edit">Edit Fan Moment</string>
    <string name="menu_fan_moments_all">All Fan Moments</string>
    <string name="menu_add_fan_moment">Add Fan Moment</string>
    <string name="menu_fan_moments">Fan Moments</string>
    <string name="error_title">Please enter a name</string>
    <string name="error_date">Please enter a title</string>
    <string name="error_desc">Please enter a description</string>
    <string name="favourites_title">Favourite Fan Moments</string>
    <string name="menu_favourites">Favourites</string>
    <string name="action_players">Players</string>
    <string name="action_player_add">Add Player</string>


    <!--END Firebase Resources-->

</resources>

