<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".teamtracker.fragments.PlayerFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/pImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:src="@mipmap/ic_launcher_round"
                android:contentDescription="TODO" />

            <Button
                android:id="@+id/addPlayerImageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/button_addPlayerImage" />

            <EditText
                android:id="@+id/pName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                android:autofillHints="" />

            <EditText
                android:id="@+id/pPosition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/hint_position"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/pAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/hint_age"
                android:inputType="number" />

            <EditText
                android:id="@+id/pCurrentValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:hint="@string/hint_currentvalue"
                android:inputType="number"
                android:autofillHints="" />

            <EditText
                android:id="@+id/pSigningValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:hint="@string/hint_signingvalue"
                android:inputType="number"
                android:autofillHints="" />

            <EditText
                android:id="@+id/pYearSigned"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:hint="@string/hint_yearsigned"
                android:inputType="number"
                android:autofillHints="" />

            <EditText
                android:id="@+id/pNationality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:hint="@string/hint_nationality"
                android:inputType="textPersonName"
                android:autofillHints="" />

            <Button
                android:id="@+id/addPlayerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/button_addPlayer" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>