<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".teamtracker.fragments.EditLegendFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/editLImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:src="@mipmap/ic_launcher_round"
                android:contentDescription="TODO" />

            <Button
                android:id="@+id/editLegendImageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/button_addLegendImage" />

            <EditText
                android:id="@+id/editLName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/hint_lname"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editCaps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/hint_caps"
                android:inputType="number" />

            <EditText
                android:id="@+id/editTrophiesWon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/hint_trophiesWon"
                android:inputType="number" />

            <EditText
                android:id="@+id/editYrsAtClub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/hint_yrsAtClub"
                android:inputType="number" />

            <Button
                android:id="@+id/editLegendButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/button_addLegend" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>